--- a/soccer_field_project/src/main/webapp/assets/css/style.css
+++ b/soccer_field_project/src/main/webapp/assets/css/style.css
@@ -17901,8 +17901,7 @@ div.tagsinput {
     .table td img,
     .jsgrid .jsgrid-table td img {
       width: 30px;
-      height: 30px;
-      border-radius: 100%; }
+      height: 30px;}
     .table th .badge, .jsgrid .jsgrid-table th .badge,
     .table td .badge,
     .jsgrid .jsgrid-table td .badge {
